--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       
       </div>
       <script type="module">
-      import RefreshRuntime from "http://localhost:5173/@react-refresh";
+      import RefreshRuntime from "https://market-mingle-app.onrender.com/@react-refresh";
       RefreshRuntime.injectIntoGlobalHook(window);
       window.$RefreshReg$ = () => {};
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
       </script>
-      <script type="module" src="http://localhost:5173/src/main.jsx"></script>
+      <script type="module" src="https://market-mingle-app.onrender.com/src/main.jsx"></script>
       
     </body>
     </html>
